--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.+'
 	compile 'ch.qos.logback:logback-classic:1.+'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.+'
 	compile fileTree(dir: 'lib', include: ['*.jar'])
 	testCompile 'junit:junit:4.+'
 }
